kube-deploy-template/component/profile/cruiser/cloud/service.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: event-display
  namespace: cloud
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-releases/knative.dev/eventing/cmd/event_display
