kube-deploy-template/component/profile/cruiser/cloud/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grpc
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: self-signed-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
        namespaces:
          from: All
    - name: grpc
      port: 443
      protocol: HTTPS
      hostname: "*.api.local"
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: default-gw-cert
